--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -18,39 +18,39 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:animateLayoutChanges="true">
-            
+
             <ImageView
                 android:id="@+id/imageBack"
                 android:layout_width="@dimen/_30sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginStart="@dimen/_6sdp"
-                android:layout_marginEnd="@dimen/_12sdp"
                 android:layout_marginTop="@dimen/_20sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_back_arrow"
-                app:tint="@color/colorIcons"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/colorIcons" />
 
             <ImageView
                 android:id="@+id/imageDone"
                 android:layout_width="@dimen/_20sdp"
                 android:layout_height="@dimen/_20sdp"
                 android:layout_marginEnd="@dimen/_12sdp"
+                android:background="@drawable/background_done"
                 android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_done"
-                android:background="@drawable/background_done"
-                app:tint="@color/colorIcons"
+                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@id/imageBack"
-                app:layout_constraintBottom_toBottomOf="@id/imageBack"/>
+                app:tint="@color/colorIcons" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/titleTextLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_15sdp"
                 android:layout_marginEnd="@dimen/_12sdp"
                 android:hint="@string/note_title"
                 android:textColorHint="@color/colorTextHint"
@@ -68,7 +68,7 @@
                     android:includeFontPadding="false"
                     android:inputType="text"
                     android:textColor="@color/colorWhite"
-                    android:textSize="@dimen/_16ssp"/>
+                    android:textSize="@dimen/_16ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -76,39 +76,39 @@
                 android:id="@+id/textDateTime"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:includeFontPadding="false"
                 android:fontFamily="@font/ubuntu_regular"
+                android:includeFontPadding="false"
                 android:textColor="@color/colorIcons"
                 android:textSize="@dimen/_10ssp"
-                app:layout_constraintStart_toStartOf="@id/titleTextLayout"
                 app:layout_constraintEnd_toEndOf="@id/titleTextLayout"
-                app:layout_constraintTop_toBottomOf="@id/titleTextLayout"/>
+                app:layout_constraintStart_toStartOf="@id/titleTextLayout"
+                app:layout_constraintTop_toBottomOf="@id/titleTextLayout" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/subtitleTextLayout"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
                 android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="@dimen/_12sdp"
                 android:hint="@string/note_subtitle"
                 android:textColorHint="@color/colorTextHint"
                 app:hintTextColor="@color/colorTextHint"
-                app:layout_constraintTop_toBottomOf="@id/textDateTime"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/subtitleIndicator"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintTop_toBottomOf="@id/textDateTime">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/subtitleText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
-                    android:includeFontPadding="false"
                     android:imeOptions="actionDone"
                     android:importantForAutofill="no"
+                    android:includeFontPadding="false"
                     android:inputType="text"
                     android:textColor="@color/colorTextSubtitle"
-                    android:textSize="@dimen/_13ssp"/>
+                    android:textSize="@dimen/_13ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -118,40 +118,44 @@
                 android:layout_height="0dp"
                 android:layout_marginStart="@dimen/_12sdp"
                 android:background="@drawable/subtitle_indicator"
-                app:layout_constraintTop_toTopOf="@id/subtitleTextLayout"
                 app:layout_constraintBottom_toBottomOf="@id/subtitleTextLayout"
-                app:layout_constraintStart_toStartOf="parent"/>
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/subtitleTextLayout" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/noteTextLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
                 android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginTop="15dp"
                 android:layout_marginEnd="@dimen/_12sdp"
                 android:layout_marginBottom="@dimen/_15sdp"
                 android:hint="@string/add_your_note_here"
                 android:textColorHint="@color/colorTextHint"
                 app:hintTextColor="@color/colorTextHint"
-                app:layout_constraintTop_toBottomOf="@id/subtitleTextLayout"
-                app:layout_constraintBottom_toBottomOf="parent">
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/subtitleTextLayout">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/noteText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:minHeight="@dimen/_100sdp"
                     android:background="@color/colorPrimary"
                     android:importantForAutofill="no"
                     android:includeFontPadding="false"
                     android:inputType="textMultiLine"
+                    android:minHeight="@dimen/_100sdp"
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/_13ssp" />
 
             </com.google.android.material.textfield.TextInputLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-        
+
     </ScrollView>
+
+    <include
+        android:id="@+id/layoutColorPickerContainer"
+        layout="@layout/layout_color_picker" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
