add image to note

--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -122,6 +122,18 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@id/subtitleTextLayout" />
 
+            <ImageView
+                android:id="@+id/imageNote"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                android:adjustViewBounds="true"
+                android:contentDescription="@string/app_name"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/subtitleTextLayout"/>
+
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/noteTextLayout"
                 android:layout_width="match_parent"
@@ -134,12 +146,13 @@
                 android:textColorHint="@color/colorTextHint"
                 app:hintTextColor="@color/colorTextHint"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/subtitleTextLayout">
+                app:layout_constraintTop_toBottomOf="@id/imageNote">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/noteText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="top|start"
                     android:background="@color/colorPrimary"
                     android:importantForAutofill="no"
                     android:includeFontPadding="false"
