--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -134,6 +134,30 @@
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/subtitleTextLayout"/>
 
+            <LinearLayout
+                android:id="@+id/layoutWebUrl"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="@dimen/_12sdp"
+                android:layout_marginTop="@dimen/_15sdp"
+                android:layout_marginEnd="@dimen/_12sdp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@id/imageNote">
+
+                <TextView
+                    android:id="@+id/textWebUrl"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:autoLink="web"
+                    android:fontFamily="@font/ubuntu_regular"
+                    android:includeFontPadding="false"
+                    android:textSize="@dimen/_13ssp"/>
+
+            </LinearLayout>
+            
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/noteTextLayout"
                 android:layout_width="match_parent"
@@ -146,7 +170,7 @@
                 android:textColorHint="@color/colorTextHint"
                 app:hintTextColor="@color/colorTextHint"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/imageNote">
+                app:layout_constraintTop_toBottomOf="@id/layoutWebUrl">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/noteText"
