--- a/app/src/main/res/layout/activity_create_note.xml
+++ b/app/src/main/res/layout/activity_create_note.xml
@@ -134,6 +134,21 @@
                 android:visibility="gone"
                 app:layout_constraintTop_toBottomOf="@id/subtitleTextLayout" />
 
+            <ImageView
+                android:id="@+id/imageNoteDelete"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginEnd="@dimen/_10sdp"
+                android:contentDescription="@string/app_name"
+                android:padding="@dimen/_4sdp"
+                android:background="@drawable/background_delete"
+                android:src="@drawable/ic_delete"
+                app:tint="@color/colorWhite"
+                android:visibility="gone"
+                app:layout_constraintTop_toTopOf="@id/imageNote"
+                app:layout_constraintEnd_toEndOf="@id/imageNote"/>
+
             <LinearLayout
                 android:id="@+id/layoutWebUrl"
                 android:layout_width="match_parent"
@@ -144,7 +159,8 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:visibility="gone"
-                app:layout_constraintTop_toBottomOf="@id/imageNote">
+                app:layout_constraintTop_toBottomOf="@id/imageNote"
+                tools:ignore="UseCompoundDrawables">
 
                 <TextView
                     android:id="@+id/textWebUrl"
@@ -155,6 +171,14 @@
                     android:fontFamily="@font/ubuntu_regular"
                     android:includeFontPadding="false"
                     android:textSize="@dimen/_13ssp" />
+
+                <ImageView
+                    android:id="@+id/imageWebUrlDelete"
+                    android:layout_width="@dimen/_20sdp"
+                    android:layout_height="@dimen/_20sdp"
+                    android:contentDescription="@string/app_name"
+                    android:src="@drawable/ic_delete"
+                    app:tint="@color/colorDelete" />
 
             </LinearLayout>
 
