add new feature: delete note

--- a/app/src/main/res/layout/layout_delete_note.xml
+++ b/app/src/main/res/layout/layout_delete_note.xml
@@ -1,95 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/layoutAddUrlContainer"
+    android:id="@+id/layoutDeleteNoteContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/_10sdp"
     android:layout_gravity="center"
+    android:layout_margin="@dimen/_10sdp"
     android:background="@drawable/background_dialog">
 
     <ImageView
-        android:id="@+id/imageUrl"
+        android:id="@+id/imageDeleteNote"
         android:layout_width="@dimen/_25sdp"
         android:layout_height="@dimen/_25sdp"
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginTop="@dimen/_8sdp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_link"
-        app:tint="@color/colorWhite"
+        android:src="@drawable/ic_delete"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        app:tint="@color/colorWhite" />
 
     <TextView
-        android:id="@+id/textAddUrl"
+        android:id="@+id/textDeleteNote"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
-        android:includeFontPadding="false"
         android:fontFamily="@font/ubuntu_bold"
-        android:text="@string/add_url"
+        android:includeFontPadding="false"
+        android:text="@string/delete_note"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/_14ssp"
-        app:layout_constraintStart_toEndOf="@id/imageUrl"
-        app:layout_constraintTop_toTopOf="@id/imageUrl"
-        app:layout_constraintBottom_toBottomOf="@id/imageUrl"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="@id/imageDeleteNote"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/imageDeleteNote"
+        app:layout_constraintTop_toTopOf="@id/imageDeleteNote" />
 
-    <EditText
-        android:id="@+id/editUrl"
+    <TextView
+        android:id="@+id/textDeleteNoteQuestion"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_35sdp"
-        android:layout_marginStart="@dimen/_8sdp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginStart="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
         android:paddingStart="@dimen/_8sdp"
         android:paddingEnd="@dimen/_8sdp"
-        android:gravity="center_vertical"
-        android:background="@null"
-        android:imeOptions="actionDone"
-        android:includeFontPadding="false"
-        android:importantForAutofill="no"
-        android:inputType="textUri"
         android:fontFamily="@font/ubuntu_regular"
+        android:includeFontPadding="false"
+        android:gravity="center_vertical"
+        android:text="@string/delete_note_question"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/_13ssp"
-        android:hint="@string/enter_url"
-        android:textColorHint="@color/colorTextHint"
-        app:layout_constraintTop_toBottomOf="@id/imageUrl"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/imageDeleteNote"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonDoneAddUrl"
+        android:id="@+id/buttonDelete"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/_8sdp"
         android:layout_marginEnd="@dimen/_8sdp"
         android:layout_marginBottom="@dimen/_8sdp"
         android:padding="@dimen/_8sdp"
         android:fontFamily="@font/ubuntu_medium"
         android:includeFontPadding="false"
-        android:text="@string/add"
-        android:textSize="@dimen/_12ssp"
-        android:textColor="@color/colorAccent"
-        app:layout_constraintTop_toBottomOf="@id/editUrl"
+        android:text="@string/delete_note"
+        android:textColor="@color/colorDelete"
+        android:textSize="@dimen/_13ssp"
+        app:layout_constraintTop_toBottomOf="@id/textDeleteNoteQuestion"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/buttonCancelAddUrl"
+        android:id="@+id/buttonCancel"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="@dimen/_4sdp"
+        android:layout_marginTop="@dimen/_8sdp"
+        android:layout_marginEnd="@dimen/_8sdp"
+        android:layout_marginBottom="@dimen/_8sdp"
         android:padding="@dimen/_8sdp"
         android:fontFamily="@font/ubuntu_medium"
         android:includeFontPadding="false"
         android:text="@string/cancel"
-        android:textSize="@dimen/_12ssp"
-        android:textColor="@color/colorWhite"
-        app:layout_constraintTop_toTopOf="@id/buttonDoneAddUrl"
-        app:layout_constraintEnd_toStartOf="@id/buttonDoneAddUrl"
-        app:layout_constraintBottom_toBottomOf="@id/buttonDoneAddUrl"/>
+        android:textColor="@color/colorAccent"
+        android:textSize="@dimen/_13ssp"
+        app:layout_constraintTop_toTopOf="@id/buttonDelete"
+        app:layout_constraintEnd_toStartOf="@id/buttonDelete"
+        app:layout_constraintBottom_toBottomOf="@id/buttonDelete"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
